server/aws-stack/cloudformation-myservices.json
{
    "Resources": {
        "MySiteVPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "my-site-vpc"
                    }
                ]
            }
        },
        "PublicSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-east-1a",
                "CidrBlock": "10.0.1.0/24",
                "MapPublicIpOnLaunch": true,
                "VpcId": {
                    "Ref": "MySiteVPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "my-site-public-subnet-1"
                    }
                ]
            }
        },
        "PublicSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-east-1b",
                "CidrBlock": "10.0.2.0/24",
                "MapPublicIpOnLaunch": true,
                "VpcId": {
                    "Ref": "MySiteVPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "my-site-public-subnet-2"
                    }
                ]
            }
        },
        "PrivateSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-east-1a",
                "CidrBlock": "10.0.3.0/24",
                "MapPublicIpOnLaunch": false,
                "VpcId": {
                    "Ref": "MySiteVPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "my-site-private-subnet-1"
                    }
                ]
            }
        },
        "PrivateSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-east-1b",
                "CidrBlock": "10.0.4.0/24",
                "MapPublicIpOnLaunch": false,
                "VpcId": {
                    "Ref": "MySiteVPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "my-site-private-subnet-2"
                    }
                ]
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "my-site-igw"
                    }
                ]
            }
        },
        "InternetGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "MySiteVPC"
                },
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },
        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "MySiteVPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "my-site-public-rt"
                    }
                ]
            }
        },
        "PublicRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "InternetGatewayAttachment",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                },
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }
            }
        },
        "PublicSubnet1RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "PublicSubnet1"
                },
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }
            }
        },
        "PublicSubnet2RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "PublicSubnet2"
                },
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }
            }
        },
        "ALBSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupName": "my-alb-sg",
                "GroupDescription": "Security group for my ALB",
                "VpcId": {
                    "Ref": "MySiteVPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 80,
                        "ToPort": 80,
                        "CidrIp": "10.0.0.0/16"
                    }
                ]
            }
        },
        "ALBTargetGroup": {
            "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
            "Properties": {
                "Name": "my-alb-tg",
                "VpcId": {
                    "Ref": "MySiteVPC"
                },
                "Protocol": "HTTP",
                "Port": 80,
                "TargetType": "instance",
                "HealthCheckIntervalSeconds": 30,
                "HealthCheckPath": "/",
                "HealthCheckTimeoutSeconds": 5,
                "HealthyThresholdCount": 2,
                "UnhealthyThresholdCount": 2
            }
        },
        "ALBListener": {
            "Type": "AWS::ElasticLoadBalancingV2::Listener",
            "Properties": {
                "DefaultActions": [
                    {
                        "Type": "forward",
                        "TargetGroupArn": {
                            "Ref": "ALBTargetGroup"
                        }
                    }
                ],
                "LoadBalancerArn": {
                    "Ref": "ALB"
                },
                "Port": 80,
                "Protocol": "HTTP"
            }
        },
        "ALB": {
            "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
            "Properties": {
                "Name": "my-site-alb",
                "Scheme": "internet-facing",
                "IpAddressType": "ipv4",
                "Subnets": [
                    {
                        "Ref": "PublicSubnet1"
                    },
                    {
                        "Ref": "PublicSubnet2"
                    }
                ],
                "SecurityGroups": [
                    {
                        "Ref": "ALBSecurityGroup"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "my-site-alb"
                    }
                ],
                "Type": "application",
                "LoadBalancerAttributes": [
                    {
                        "Key": "deletion_protection.enabled",
                        "Value": "false"
                    }
                ]
            }
        },
        "ECSTaskExecutionRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Version": "2012-10-17",
                    "Statement": [
                        {
                            "Effect": "Allow",
                            "Principal": {
                                "Service": "ecs-tasks.amazonaws.com"
                            },
                            "Action": "sts:AssumeRole"
                        }
                    ]
                },
                "ManagedPolicyArns": [
                    "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
                ]
            }
        },
        "ECSTaskDefinition": {
            "Type": "AWS::ECS::TaskDefinition",
            "Properties": {
                "Family": "my-ecs-cluster-task",
                "ExecutionRoleArn": {
                    "Ref": "ECSTaskExecutionRole"
                },
                "Cpu": "512",
                "Memory": "1024",
                "NetworkMode": "awsvpc",
                "RequiresCompatibilities": [
                    "FARGATE"
                ],
                "ContainerDefinitions": [
                    {
                        "Name": "services-task",
                        "Image": "561213538380.dkr.ecr.us-east-1.amazonaws.com/my-site",
                        "PortMappings": [
                            {
                                "ContainerPort": 4000
                            }
                        ],
                        "Environment": [
                            {
                                "Name": "APP_ENV",
                                "Value": "fargate"
                            }
                        ]
                    }
                ]
            }
        },
        "MyClusterTaskSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Security group for my ECS cluster tasks",
                "GroupName": "my-cluster-task-sg",
                "VpcId": {
                    "Ref": "MySiteVPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "-1",
                        "SourceSecurityGroupId": {
                            "Ref": "ALBSecurityGroup"
                        }
                    }
                ]
            }
        },
        "MySiteCluster": {
            "Type": "AWS::ECS::Cluster",
            "Properties": {
                "ClusterName": "my-site-cluster"
            }
        },
        "ClusterTaskTargetGroup": {
            "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "MySiteVPC"
                },
                "Protocol": "HTTP",
                "Port": 4000,
                "TargetType": "ip",
                "HealthCheckIntervalSeconds": 30,
                "HealthCheckPath": "/",
                "HealthCheckProtocol": "HTTP",
                "HealthCheckTimeoutSeconds": 10,
                "HealthyThresholdCount": 2,
                "UnhealthyThresholdCount": 5
            }
        },
        "ECSService": {
            "Type": "AWS::ECS::Service",
            "Properties": {
                "Cluster": {
                    "Ref": "MySiteCluster"
                },
                "LaunchType": "FARGATE",
                "DeploymentController": {
                    "Type": "ECS"
                },
                "TaskDefinition": "my-ecs-cluster-task",
                "NetworkConfiguration": {
                    "AwsvpcConfiguration": {
                        "AssignPublicIp": "ENABLED",
                        "SecurityGroups": [
                            {
                                "Ref": "MyClusterTaskSG"
                            }
                        ],
                        "Subnets": [
                            {
                                "Ref": "PublicSubnet1"
                            },
                            {
                                "Ref": "PublicSubnet2"
                            }
                        ]
                    }
                },
                "LoadBalancers": [
                    {
                        "ContainerName": "services-task", 
                        "TargetGroupArn": {
                            "Ref": "ClusterTaskTargetGroup"
                        }
                    }
                ]
            }
        }
    }
}
